get and post photo done
