# data/request/photos.go
@@ -1,0 +1,7 @@
+package request
+
+type PhotoPostReq struct {
+	Title    string `json:"title"`
+	Caption  string `json:"caption"`
+	PhotoUrl string `json:"photo_url"`
+}
