# data/response/photos.go
@@ -1,0 +1,28 @@
+package response
+
+import "time"
+
+type UserPhotos struct {
+	Email    string `json:"email"`
+	Username string `json:"username"`
+}
+
+type PhotosGetRes struct {
+	Id        uint       `json:"id"`
+	Title     string     `json:"title"`
+	Caption   string     `json:"caption"`
+	PhotoUrl  string     `json:"photo_url"`
+	UserId    uint       `json:"user_id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	User      UserPhotos `json:"User"`
+}
+
+type PhotoPostRes struct {
+	Id        uint       `json:"id"`
+	Title     string     `json:"title"`
+	Caption   string     `json:"caption"`
+	PhotoUrl  string     `json:"photo_url"`
+	UserId    uint       `json:"user_id"`
+	CreatedAt time.Time  `json:"created_at"`
+}
